 - Qt: Fix maximum year in sensor override
 - GBA: Cap audio FIFO read size during deserialization
 - GBA: Check for corrupted savestates when loading
 - GBA: Check for improperly sized savestates when loading
 - GBA: Check for savestates made from differently sized ROMs
 - GBA Video: Fix out-of-bounds tiles in mosaic
 - GBA Memory: Fix potential DMA issue when loading a savestate
Misc:
 - Qt: Handle saving input settings better
 - Debugger: Free watchpoints in addition to breakpoints
 - Qt: Move GL frame drawing back onto its own thread
 - GBA: Add status log level
 - GBA Thread: Add functionality for running callbacks on the GBA thread
 - Qt: Fast forward (held) option moved from Other to Emulation menu
 - All: Add --help flag for command line programs
 - Qt: Show version info in window title
 - All: Fix sanitize-deb script to set file permissions properly if run as (fake)root
 - GBA SIO: Add a dummy driver for Normal mode
 - GBA: GBARewind now returns how many states it has rewound
 - All: Enable static linking for Windows
 - All: Enable static linking for OS X
 - Qt: Migrate multiplayer window handling into GBAApp
 - Qt: Unified file opening and saving with last location
 - Qt: Fix windows being resizable when they shouldn't have been
 - Qt: Only hide cursor in full screen
 - Perf: Ability to load savestates immediately on launch
 - Qt: Replace pause-after-frame mutex with an atomic
 - Util: Allow disabling the threading code entirely

0.2.1: (2015-05-13)
Bugfixes:
 - All: Fix sanitize-deb script not cleaning up after itself
 - All: Fix dependencies for libavcodec on Debian-derived platforms
 - ARM7: Handle writeback for PC in addressing modes 2 and 3
 - ARM7: Make illegal instruction decoding consistent between ARM and Thumb
 - ARM7: Fix ARM multiply instructions when PC is a destination register
 - Debugger: Fix use-after-free in breakpoint clearing code
 - Debugger: Fix boundary conditions in tab completion