@@ -39,6 +39,7 @@ Bugfixes:
  - GBA: Check for savestates made from differently sized ROMs
  - GBA Video: Fix out-of-bounds tiles in mosaic
  - GBA Memory: Fix potential DMA issue when loading a savestate
+ - GBA Audio: Fix audio pitch changing when adjusting buffer size
 Misc:
  - Qt: Handle saving input settings better
  - Debugger: Free watchpoints in addition to breakpoints
